<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_up"
        android:textColor="@color/dark_blue"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:inputType="text"
        android:background="@drawable/edit_text_gray_normal"
        android:hint="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin"
        tools:layout_editor_absoluteX="-1dp" />

    <TextView
        android:id="@+id/textViewAlertUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/alert_username"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/editTextUsername"
        app:layout_constraintTop_toBottomOf="@id/editTextUsername"
        tools:visibility="visible"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_gray_normal"
        android:hint="@string/password"
        android:lines="1"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
        tools:layout_editor_absoluteX="-1dp" />

    <TextView
        android:id="@+id/textViewAlertPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_password"
        android:layout_marginTop="8dp"
        android:textColor="@color/red"
        android:visibility="invisible"
        android:lines="1"
        app:layout_constraintStart_toStartOf="@id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/login_low"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:background="@drawable/button_green_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>